--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -584,44 +584,120 @@ video {
   margin-bottom: 3rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-3 {
   margin-bottom: 0.75rem;
 }
 
+.mb-3\.5 {
+  margin-bottom: 0.875rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
 .mb-7 {
   margin-bottom: 1.75rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.mb-3\.5 {
-  margin-bottom: 0.875rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.block {
-  display: block;
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-\[calc\(100vh-120px\)\] {
+  margin-top: calc(100vh - 120px);
+}
+
+.mt-\[calc\(\(100vh-120px\)\)\] {
+  margin-top: calc((100vh - 120px));
+}
+
+.mt-\[calc\(\(100vh-120px\)\/\)\] {
+  margin-top: calc((100vh - 120px) / );
+}
+
+.mt-\[calc\(\(100vh-120px\)\/2\)\] {
+  margin-top: calc((100vh - 120px) / 2);
+}
+
+.mt-\[calc\(\(100vh-120px\)\%2\)\] {
+  margin-top: calc((100vh - 120px)%2);
+}
+
+.mt-\[calc\(\(100vh-120px\)2\)\] {
+  margin-top: calc((100vh - 120px)2);
+}
+
+.mt-\[calc\(\(100vh-120px\)-\/2\)\] {
+  margin-top: calc((100vh - 120px) - /2);
+}
+
+.mt-\[calc\(\(100vh-120px-\)\/2\)\] {
+  margin-top: calc((100vh - 120px - ) / 2);
+}
+
+.mt-\[calc\(\(120px\)\/2\)\] {
+  margin-top: calc((120px) / 2);
+}
+
+.mt-\[calc\(\(-120px\)\/2\)\] {
+  margin-top: calc((-120px) / 2);
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
+}
+
+.hidden {
+  display: none;
 }
 
 .h-14 {
@@ -640,6 +716,50 @@ video {
   height: 100vh;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[calc\(100vw-100px\)\] {
+  height: calc(100vw - 100px);
+}
+
+.h-\[calc\(100vw-px\)\] {
+  height: calc(100vw - px);
+}
+
+.h-\[calc\(100vw-40px\)\] {
+  height: calc(100vw - 40px);
+}
+
+.h-\[calc\(100vh-40px\)\] {
+  height: calc(100vh - 40px);
+}
+
+.h-\[calc\(100vh\)\] {
+  height: calc(100vh);
+}
+
+.h-\[calc\(100vh-\)\] {
+  height: calc(100vh - );
+}
+
+.h-\[calc\(100vh-100\)\] {
+  height: calc(100vh - 100);
+}
+
+.h-\[calc\(100vh-100px\)\] {
+  height: calc(100vh - 100px);
+}
+
+.h-\[calc\(100vh-120px\)\] {
+  height: calc(100vh - 120px);
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -656,28 +776,64 @@ video {
   width: 1.25rem;
 }
 
-.w-96 {
-  width: 24rem;
+.w-\[85\%\] {
+  width: 85%;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-\[\] {
-  width: ;
+.w-20 {
+  width: 5rem;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-auto {
+  width: auto;
 }
 
-.w-\[\%\] {
-  width: %;
+.w-screen {
+  width: 100vw;
 }
 
-.w-\[85\%\] {
-  width: 85%;
+.w-10\/12 {
+  width: 83.333333%;
+}
+
+.w-\[calc\(\)\] {
+  width: calc();
+}
+
+.w-\[calc\(100\)\] {
+  width: calc(100);
+}
+
+.w-\[calc\(100vw\)\] {
+  width: calc(100vw);
+}
+
+.w-\[calc\(100vw-\)\] {
+  width: calc(100vw - );
+}
+
+.w-\[calc\(100vw-80px\)\] {
+  width: calc(100vw - 80px);
+}
+
+.w-\[calc\(100vw-100px\)\] {
+  width: calc(100vw - 100px);
+}
+
+.w-\[calc\(100vw-150px\)\] {
+  width: calc(100vw - 150px);
+}
+
+.w-\[calc\(100vw-10px\)\] {
+  width: calc(100vw - 10px);
+}
+
+.w-\[calc\(100vw-120px\)\] {
+  width: calc(100vw - 120px);
 }
 
 .flex-col {
@@ -692,16 +848,40 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .self-end {
   align-self: flex-end;
+}
+
+.self-center {
+  align-self: center;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded-2xl {
@@ -710,6 +890,22 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .bg-\[\#EFF1F9\] {
@@ -732,6 +928,62 @@ video {
   background-color: rgb(85 112 241 / var(--tw-bg-opacity));
 }
 
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\] {
+  background-color: ;
+}
+
+.bg-\[\#92F345\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(146 243 69 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FD2525\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 37 37 / var(--tw-bg-opacity));
+}
+
+.bg-\[EFEFF0\] {
+  background-color: EFEFF0;
+}
+
+.bg-\[\#EFEFF0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 240 / var(--tw-bg-opacity));
+}
+
+.bg-\[FFF5E9\] {
+  background-color: FFF5E9;
+}
+
+.bg-\[\#FFF5E9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 245 233 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#\] {
+  background-color: #;
+}
+
+.bg-\[\#FEF5EA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 245 234 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -740,14 +992,31 @@ video {
   padding: 0.625rem;
 }
 
+.p-5 {
+  padding: 1.25rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-24 {
+  padding: 6rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
 }
 
 .py-11 {
@@ -765,54 +1034,23 @@ video {
   padding-bottom: 0.875rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
+.pe-7 {
+  padding-inline-end: 1.75rem;
 }
 
 .pr-3 {
@@ -835,16 +1073,20 @@ video {
   padding-inline-start: 0.875rem;
 }
 
-.pe-3 {
-  padding-inline-end: 0.75rem;
+.pl-5 {
+  padding-left: 1.25rem;
 }
 
-.pe-7 {
-  padding-inline-end: 1.75rem;
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
-.font-poppins {
-  font-family: Poppins, sans-serif;
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-sm {
@@ -857,17 +1099,13 @@ video {
   line-height: 1.75rem;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-medium {
   font-weight: 500;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-\[\#8B8D97\] {
@@ -880,14 +1118,18 @@ video {
   color: rgb(85 112 241 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\] {
+  color: ;
+}
+
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.focus\:border-soumia-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(85 112 241 / var(--tw-border-opacity));
 }
 
 .focus\:ring-blue-500:focus {
@@ -895,30 +1137,17 @@ video {
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
-.focus\:ring-soumia-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(85 112 241 / var(--tw-ring-opacity));
-}
-
 @media (min-width: 640px) {
-  .sm\:w-1\/4 {
-    width: 25%;
+  .sm\:hidden {
+    display: none;
   }
 
   .sm\:w-1\/3 {
     width: 33.333333%;
   }
 
-  .sm\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .sm\:w-2\/5 {
-    width: 40%;
-  }
-
-  .sm\:w-3\/5 {
-    width: 60%;
+  .sm\:w-1\/4 {
+    width: 25%;
   }
 
   .sm\:px-9 {
@@ -933,67 +1162,57 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:w-1\/3 {
-    width: 33.333333%;
+  .md\:flex {
+    display: flex;
   }
 
-  .md\:w-1 {
-    width: 0.25rem;
-  }
-
-  .md\:w-1\/5 {
-    width: 20%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
+  .md\:hidden {
+    display: none;
   }
 
   .md\:w-1\/2 {
     width: 50%;
   }
 
-  .md\:px-9 {
-    padding-left: 2.25rem;
-    padding-right: 2.25rem;
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:items-start {
+    align-items: flex-start;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:items-center {
+    align-items: center;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:justify-around {
+    justify-content: space-around;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:w-1\/3 {
     width: 33.333333%;
-  }
-
-  .lg\:w-3\/5 {
-    width: 60%;
-  }
-
-  .lg\:w-2\/5 {
-    width: 40%;
-  }
-
-  .lg\:w-2\/3 {
-    width: 66.666667%;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:focus\:border-blue-500:focus {
-    --tw-border-opacity: 1;
-    border-color: rgb(59 130 246 / var(--tw-border-opacity));
-  }
-
-  .dark\:focus\:ring-blue-500:focus {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
   }
 }
