--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -584,6 +584,10 @@ video {
   margin-bottom: 3rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -608,84 +612,28 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mt-\[calc\(100vh-120px\)\] {
-  margin-top: calc(100vh - 120px);
-}
-
-.mt-\[calc\(\(100vh-120px\)\)\] {
-  margin-top: calc((100vh - 120px));
-}
-
-.mt-\[calc\(\(100vh-120px\)\/\)\] {
-  margin-top: calc((100vh - 120px) / );
-}
-
-.mt-\[calc\(\(100vh-120px\)\/2\)\] {
-  margin-top: calc((100vh - 120px) / 2);
-}
-
-.mt-\[calc\(\(100vh-120px\)\%2\)\] {
-  margin-top: calc((100vh - 120px)%2);
-}
-
-.mt-\[calc\(\(100vh-120px\)2\)\] {
-  margin-top: calc((100vh - 120px)2);
-}
-
-.mt-\[calc\(\(100vh-120px\)-\/2\)\] {
-  margin-top: calc((100vh - 120px) - /2);
-}
-
-.mt-\[calc\(\(100vh-120px-\)\/2\)\] {
-  margin-top: calc((100vh - 120px - ) / 2);
-}
-
-.mt-\[calc\(\(120px\)\/2\)\] {
-  margin-top: calc((120px) / 2);
-}
-
-.mt-\[calc\(\(-120px\)\/2\)\] {
-  margin-top: calc((-120px) / 2);
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
 .ml-6 {
   margin-left: 1.5rem;
 }
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .flex {
@@ -704,6 +652,10 @@ video {
   height: 3.5rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-4 {
   height: 1rem;
 }
@@ -712,52 +664,49 @@ video {
   height: 1.25rem;
 }
 
+.h-\[calc\(100vh-120px\)\] {
+  height: calc(100vh - 120px);
+}
+
+.h-\[calc\(100vh-80px\)\] {
+  height: calc(100vh - 80px);
+}
+
 .h-screen {
   height: 100vh;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-\[calc\(100vh-200px\)\] {
+  height: calc(100vh - 200px);
 }
 
-.h-20 {
-  height: 5rem;
+.h-\[calc\(100vh-0px\)\] {
+  height: calc(100vh - 0px);
 }
 
-.h-\[calc\(100vw-100px\)\] {
-  height: calc(100vw - 100px);
+.h-\[calc\(100vh-180px\)\] {
+  height: calc(100vh - 180px);
 }
 
-.h-\[calc\(100vw-px\)\] {
-  height: calc(100vw - px);
+.h-\[calc\(100vh-170px\)\] {
+  height: calc(100vh - 170px);
 }
 
-.h-\[calc\(100vw-40px\)\] {
-  height: calc(100vw - 40px);
+.h-\[calc\(100vh-20px\)\] {
+  height: calc(100vh - 20px);
 }
 
-.h-\[calc\(100vh-40px\)\] {
-  height: calc(100vh - 40px);
+.h-\[calc\(100vh-240px\)\] {
+  height: calc(100vh - 240px);
 }
 
-.h-\[calc\(100vh\)\] {
-  height: calc(100vh);
+.h-24 {
+  height: 6rem;
 }
 
-.h-\[calc\(100vh-\)\] {
-  height: calc(100vh - );
-}
-
-.h-\[calc\(100vh-100\)\] {
-  height: calc(100vh - 100);
-}
-
-.h-\[calc\(100vh-100px\)\] {
-  height: calc(100vh - 100px);
-}
-
-.h-\[calc\(100vh-120px\)\] {
-  height: calc(100vh - 120px);
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .w-1\/2 {
@@ -766,6 +715,10 @@ video {
 
 .w-16 {
   width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-4 {
@@ -780,60 +733,21 @@ video {
   width: 85%;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-10\/12 {
-  width: 83.333333%;
-}
-
-.w-\[calc\(\)\] {
-  width: calc();
-}
-
-.w-\[calc\(100\)\] {
-  width: calc(100);
-}
-
-.w-\[calc\(100vw\)\] {
-  width: calc(100vw);
-}
-
-.w-\[calc\(100vw-\)\] {
-  width: calc(100vw - );
+.w-\[calc\(100vw-120px\)\] {
+  width: calc(100vw - 120px);
 }
 
 .w-\[calc\(100vw-80px\)\] {
   width: calc(100vw - 80px);
 }
 
-.w-\[calc\(100vw-100px\)\] {
-  width: calc(100vw - 100px);
+.w-full {
+  width: 100%;
 }
 
-.w-\[calc\(100vw-150px\)\] {
-  width: calc(100vw - 150px);
-}
-
-.w-\[calc\(100vw-10px\)\] {
-  width: calc(100vw - 10px);
-}
-
-.w-\[calc\(100vw-120px\)\] {
-  width: calc(100vw - 120px);
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .flex-col {
@@ -864,12 +778,16 @@ video {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-96 {
+  gap: 24rem;
 }
 
 .self-end {
@@ -892,20 +810,22 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
 .border {
   border-width: 1px;
+}
+
+.bg-\[\#92F345\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(146 243 69 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#EFEFF0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 239 240 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#EFF1F9\] {
@@ -918,6 +838,21 @@ video {
   background-color: rgb(244 245 250 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FD2525\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 37 37 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FEF5EA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 245 234 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FFF5E9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 245 233 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#FFFFFF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -928,60 +863,9 @@ video {
   background-color: rgb(85 112 241 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-
-.bg-slate-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[\#92F345\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(146 243 69 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#FD2525\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 37 37 / var(--tw-bg-opacity));
-}
-
-.bg-\[EFEFF0\] {
-  background-color: EFEFF0;
-}
-
-.bg-\[\#EFEFF0\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 239 240 / var(--tw-bg-opacity));
-}
-
-.bg-\[FFF5E9\] {
-  background-color: FFF5E9;
-}
-
-.bg-\[\#FFF5E9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 245 233 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#\] {
-  background-color: #;
-}
-
-.bg-\[\#FEF5EA\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 245 234 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -992,21 +876,22 @@ video {
   padding: 0.625rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
-.p-24 {
-  padding: 6rem;
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-6 {
@@ -1017,6 +902,11 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-11 {
@@ -1032,21 +922,6 @@ video {
 .py-3\.5 {
   padding-top: 0.875rem;
   padding-bottom: 0.875rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .pe-7 {
@@ -1073,20 +948,13 @@ video {
   padding-inline-start: 0.875rem;
 }
 
-.pl-5 {
-  padding-left: 1.25rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-sm {
@@ -1097,11 +965,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-medium {
@@ -1123,10 +986,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
-}
-
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
@@ -1138,10 +997,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:w-1\/3 {
     width: 33.333333%;
   }
@@ -1162,44 +1017,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:flex {
-    display: flex;
-  }
-
-  .md\:hidden {
-    display: none;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
-  .md\:items-end {
-    align-items: flex-end;
-  }
-
   .md\:items-center {
     align-items: center;
-  }
-
-  .md\:justify-center {
-    justify-content: center;
-  }
-
-  .md\:justify-between {
-    justify-content: space-between;
-  }
-
-  .md\:justify-around {
-    justify-content: space-around;
   }
 }
 
