hope this is it °_°

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -648,6 +648,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -742,14 +746,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.cursor-none {
-  cursor: none;
-}
-
-.cursor-default {
-  cursor: default;
 }
 
 .cursor-text {
